--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
       <version>6.0.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20210307</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
     <dependency>
